# memora-django

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  Structure.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai_service/: apps.py  init.py  prompts.py  services.py  urls.py  views.py
apps/ai_service/services/: ocr_service.py  recommendation_service.py  spellcheck_service.py
apps/bookmarks/: admin.py  models.py  serializers.py  urls.py  views.py
apps/calendar/: admin.py  models.py  serializers.py  urls.py  views.py
apps/calendar/services/: ical_service.py
apps/core/: feature_flags.py
apps/core/handlers/: postman_handler.py
apps/git_service/: apps.py  init.py  services.py
apps/kanban/: admin.py  models.py  serializers.py  urls.py  views.py
apps/notes/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/notes/handlers/: sse_handler.py
apps/notes/migrations/: 0001_initial.py
apps/notes/services/: diff_service.py  encryption_service.py  image_service.py  ot_service.py  scheduler.py
apps/notes/tests/: test_views.py
apps/notifications/: admin.py  consumers.py  models.py  serializers.py  urls.py  utils.py  views.py
apps/research/migrations/: 0001_initial.py
apps/storage/: backends.py
apps/tasks/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  apps.py  init.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/services/: api_key_service.py  gdpr_service.py  totp_service.py
core/middleware/: circuit_breaker.py  quota.py
memora/: asgi.py
notion_clone/: settings.py  urls.py
notion_clone/settings/: base.py
