[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memora-django"
version = "1.0.0"
description = "A local‑first note‑taking backend for Django – AI, Git sync, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["notes", "django", "ai", "git", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "django-filter>=23.5",
    "django-markdownx>=4.0",
    "GitPython>=3.1",
    "openai>=1.3",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "celery>=5.3",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/memora"
Documentation = "https://github.com/yourusername/memora/tree/main/docs"
Repository = "https://github.com/yourusername/memora"
Issues = "https://github.com/yourusername/memora/issues"

[tool.setuptools.packages.find]
include = ["apps.*", "notion_clone.*", "core.*"]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memora-django"
version = "1.0.0"
description = "A local‑first note‑taking backend for Django – AI, Git sync, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["notes", "django", "ai", "git", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "django-filter>=23.5",
    "django-markdownx>=4.0",
    "GitPython>=3.1",
    "openai>=1.3",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "celery>=5.3",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/memora"
Documentation = "https://github.com/yourusername/memora/tree/main/docs"
Repository = "https://github.com/yourusername/memora"
Issues = "https://github.com/yourusername/memora/issues"

[tool.setuptools.packages.find]
include = ["apps.*", "notion_clone.*", "core.*"]



[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memora-django"
version = "1.0.0"
description = "A local‑first note‑taking backend for Django – AI, Git sync, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["notes", "django", "ai", "git", "local-first"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "Django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.3",
    "django-filter>=23.5",
    "django-markdownx>=4.0",
    "GitPython>=3.1",
    "openai>=1.3",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "celery>=5.3",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/memora"
Documentation = "https://github.com/yourusername/memora/tree/main/docs"
Repository = "https://github.com/yourusername/memora"
Issues = "https://github.com/yourusername/memora/issues"

[tool.setuptools.packages.find]
include = ["apps.*", "notion_clone.*", "core.*"]
